RESOLVED FIXED240753
[iOS] Text selection does not show continuous selection when dragging across pages with widows
https://bugs.webkit.org/show_bug.cgi?id=240753
Summary [iOS] Text selection does not show continuous selection when dragging across ...
alan
Reported 2022-05-20 22:09:30 PDT
Attachments
[fast-cq]Patch (9.82 KB, patch)
2022-05-20 22:18 PDT, alan
no flags
alan
Comment 1 2022-05-20 22:18:17 PDT
Created attachment 459636 [details] [fast-cq]Patch
EWS
Comment 2 2022-05-21 05:38:39 PDT
Committed r294612 (250838@main): <https://commits.webkit.org/250838@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 459636 [details].
Note You need to log in before you can comment on or make changes to this bug.